xyLang: Merge Changes from 'https://github.com/alexandermakeev/toy-language'
a54087b Add "this" keyword
2c4f252 Evaluate class's function
2c4b74c Implement ClassValue
4fe850c Add ClassStatement
8a90717 Refactor StatementParser
bcbbca0 Add DefinitionContext
e01cc3f Add stack.toy
6a8239e Rename "struct" to "class"
c752a07 Remove "then" keyword
d8685ec Refactor MemoryContext using stack
9c37c04 Add two-dots negative lookahead for Numeric lexeme
12376e3 Redesign loops with unary scheme
2ef9e41 Update README.md
1818ebf Add BreakStatement and NextStatement
4f51e4c Add IterableLoopStatement
91c4ad0 Add LoopStatement and WhileLoopStatement
4fe3dd5 Add bubble_sort.toy
fd15255 Add loop lexemes
24e863e Add variables assignment with ExpressionStatement
96a1387 Add array append operator "<<"
5076f8f Add ArrayValue
9f983d9 Add binary_search.toy test
8f9afc4 Add FloorDivisionOperator "//"
50a181a Delegate assign operations to AssignOperator
5afc3bc Improve MemoryScope with Global/Local variable type
72cdfd4 Enhance condition statements with elif/else cases
17ddebc Add README.md
9ad1ad2 Add tests