@@ -1,11 +1,12 @@
 package org.example.toylanguage;
 
-import org.example.toylanguage.definition.StructureDefinition;
-import org.example.toylanguage.expression.StructureExpression;
+import org.example.toylanguage.context.MemoryContext;
+import org.example.toylanguage.context.definition.DefinitionContext;
+import org.example.toylanguage.expression.ClassExpression;
+import org.example.toylanguage.expression.Expression;
 import org.example.toylanguage.expression.VariableExpression;
-import org.example.toylanguage.expression.operator.AdditionOperator;
-import org.example.toylanguage.expression.operator.GreaterThanOperator;
-import org.example.toylanguage.expression.operator.StructureInstanceOperator;
+import org.example.toylanguage.expression.operator.*;
+import org.example.toylanguage.expression.value.LogicalValue;
 import org.example.toylanguage.expression.value.NumericValue;
 import org.example.toylanguage.expression.value.TextValue;
 import org.example.toylanguage.statement.*;
@@ -13,21 +14,25 @@ import org.example.toylanguage.token.Token;
 import org.example.toylanguage.token.TokenType;
 import org.junit.jupiter.api.Test;
 
-import java.util.Arrays;
+import java.util.ArrayList;
 import java.util.List;
+import java.util.Map;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 
 class StatementParserTest {
 
     @Test
     public void printTest() {
-        List<Token> tokens = Arrays.asList(
+        List<Token> tokens = List.of(
                 Token.builder().type(TokenType.Keyword).value("print").build(),
                 Token.builder().type(TokenType.Text).value("Hello World").build()
         );
-        StatementParser parser = new StatementParser(tokens);
-        CompositeStatement statement = (CompositeStatement) parser.parse();
+        DefinitionContext.pushScope(DefinitionContext.newScope());
+        MemoryContext.pushScope(MemoryContext.newScope());
+        CompositeStatement statement = new CompositeStatement();
+        StatementParser.parse(tokens, statement);
 
         List<Statement> statements = statement.getStatements2Execute();
         assertEquals(1, statements.size());
@@ -39,17 +44,21 @@ class StatementParserTest {
         TextValue textValue = (TextValue) printStatement.getExpression();
 
         assertEquals("Hello World", textValue.getValue());
+
+        DefinitionContext.endScope();
+        MemoryContext.endScope();
     }
 
     @Test
     public void testInput() {
-
-        List<Token> tokens = Arrays.asList(
+        List<Token> tokens = List.of(
                 Token.builder().type(TokenType.Keyword).value("input").build(),
                 Token.builder().type(TokenType.Variable).value("a").build()
         );
-        StatementParser parser = new StatementParser(tokens);
-        CompositeStatement statement = (CompositeStatement) parser.parse();
+        DefinitionContext.pushScope(DefinitionContext.newScope());
+        MemoryContext.pushScope(MemoryContext.newScope());
+        CompositeStatement statement = new CompositeStatement();
+        StatementParser.parse(tokens, statement);
 
         List<Statement> statements = statement.getStatements2Execute();
         assertEquals(1, statements.size());
@@ -58,30 +67,40 @@ class StatementParserTest {
         InputStatement inputStatement = (InputStatement) statements.get(0);
 
         assertEquals("a", inputStatement.getName());
+
+        DefinitionContext.endScope();
+        MemoryContext.endScope();
     }
 
     @Test
     public void testAssignment() {
-
-        List<Token> tokens = Arrays.asList(
+        List<Token> tokens = List.of(
                 Token.builder().type(TokenType.Variable).value("a").build(),
                 Token.builder().type(TokenType.Operator).value("=").build(),
                 Token.builder().type(TokenType.Numeric).value("2").build(),
                 Token.builder().type(TokenType.Operator).value("+").build(),
                 Token.builder().type(TokenType.Numeric).value("5").build()
         );
-        StatementParser parser = new StatementParser(tokens);
-        CompositeStatement statement = (CompositeStatement) parser.parse();
+        DefinitionContext.pushScope(DefinitionContext.newScope());
+        MemoryContext.pushScope(MemoryContext.newScope());
+        CompositeStatement statement = new CompositeStatement();
+        StatementParser.parse(tokens, statement);
 
         List<Statement> statements = statement.getStatements2Execute();
         assertEquals(1, statements.size());
 
-        assertEquals(AssignStatement.class, statements.get(0).getClass());
-        AssignStatement assignmentStatement = (AssignStatement) statements.get(0);
-        assertEquals("a", assignmentStatement.getName());
+        assertEquals(ExpressionStatement.class, statements.get(0).getClass());
+        ExpressionStatement expressionStatement = (ExpressionStatement) statements.get(0);
 
-        assertEquals(AdditionOperator.class, assignmentStatement.getExpression().getClass());
-        AdditionOperator operator = (AdditionOperator) assignmentStatement.getExpression();
+        assertEquals(expressionStatement.getExpression().getClass(), AssignmentOperator.class);
+        AssignmentOperator assignOperator = (AssignmentOperator) expressionStatement.getExpression();
+
+        assertTrue(assignOperator.getLeft() instanceof VariableExpression);
+        VariableExpression variableExpression = (VariableExpression) assignOperator.getLeft();
+        assertEquals("a", variableExpression.getName());
+
+        assertEquals(AdditionOperator.class, assignOperator.getRight().getClass());
+        AdditionOperator operator = (AdditionOperator) assignOperator.getRight();
 
         assertEquals(NumericValue.class, operator.getLeft().getClass());
         NumericValue left = (NumericValue) operator.getLeft();
@@ -90,23 +109,35 @@ class StatementParserTest {
         assertEquals(NumericValue.class, operator.getRight().getClass());
         NumericValue right = (NumericValue) operator.getRight();
         assertEquals(5, right.getValue());
+
+        DefinitionContext.endScope();
+        MemoryContext.endScope();
     }
 
     @Test
     public void testCondition() {
-
-        List<Token> tokens = Arrays.asList(
+        List<Token> tokens = List.of(
                 Token.builder().type(TokenType.Keyword).value("if").build(),
                 Token.builder().type(TokenType.Variable).value("a").build(),
                 Token.builder().type(TokenType.Operator).value(">").build(),
-                Token.builder().type(TokenType.Numeric).value("1").build(),
-                Token.builder().type(TokenType.Keyword).value("then").build(),
+                Token.builder().type(TokenType.Numeric).value("5").build(),
                 Token.builder().type(TokenType.Keyword).value("print").build(),
-                Token.builder().type(TokenType.Text).value("a is greater than 1").build(),
+                Token.builder().type(TokenType.Text).value("a is greater than 5").build(),
+                Token.builder().type(TokenType.Keyword).value("elif").build(),
+                Token.builder().type(TokenType.Variable).value("a").build(),
+                Token.builder().type(TokenType.Operator).value(">=").build(),
+                Token.builder().type(TokenType.Numeric).value("1").build(),
+                Token.builder().type(TokenType.Keyword).value("print").build(),
+                Token.builder().type(TokenType.Text).value("a is greater than or equal to 1").build(),
+                Token.builder().type(TokenType.Keyword).value("else").build(),
+                Token.builder().type(TokenType.Keyword).value("print").build(),
+                Token.builder().type(TokenType.Text).value("a is less than 1").build(),
                 Token.builder().type(TokenType.Keyword).value("end").build()
         );
-        StatementParser parser = new StatementParser(tokens);
-        CompositeStatement statement = (CompositeStatement) parser.parse();
+        DefinitionContext.pushScope(DefinitionContext.newScope());
+        MemoryContext.pushScope(MemoryContext.newScope());
+        CompositeStatement statement = new CompositeStatement();
+        StatementParser.parse(tokens, statement);
 
         List<Statement> statements = statement.getStatements2Execute();
         assertEquals(1, statements.size());
@@ -114,31 +145,77 @@ class StatementParserTest {
         assertEquals(ConditionStatement.class, statements.get(0).getClass());
         ConditionStatement conditionStatement = (ConditionStatement) statements.get(0);
 
-        assertEquals(GreaterThanOperator.class, conditionStatement.getCondition().getClass());
-        GreaterThanOperator condition = (GreaterThanOperator) conditionStatement.getCondition();
+        Map<Expression, CompositeStatement> cases = conditionStatement.getCases();
+        assertEquals(3, cases.size());
 
-        assertEquals(VariableExpression.class, condition.getLeft().getClass());
-        VariableExpression left = (VariableExpression) condition.getLeft();
-        assertEquals("a", left.getName());
+        List<Expression> conditions = new ArrayList<>(cases.keySet());
 
-        NumericValue right = (NumericValue) condition.getRight();
-        assertEquals(1, right.getValue());
+        //if case
+        assertEquals(GreaterThanOperator.class, conditions.get(0).getClass());
+        GreaterThanOperator ifCondition = (GreaterThanOperator) conditions.get(0);
 
-        List<Statement> conditionStatements = conditionStatement.getStatements2Execute();
-        assertEquals(1, conditionStatements.size());
+        assertTrue(ifCondition.getLeft() instanceof VariableExpression);
+        VariableExpression ifLeftExpression = (VariableExpression) ifCondition.getLeft();
+        assertEquals("a", ifLeftExpression.getName());
 
-        assertEquals(PrintStatement.class, conditionStatements.get(0).getClass());
-        PrintStatement printStatement = (PrintStatement) conditionStatements.get(0);
+        NumericValue ifRightExpression = (NumericValue) ifCondition.getRight();
+        assertEquals(5, ifRightExpression.getValue());
 
-        assertEquals(TextValue.class, printStatement.getExpression().getClass());
-        TextValue printValue = (TextValue) printStatement.getExpression();
-        assertEquals("a is greater than 1", printValue.getValue());
+        List<Statement> ifStatements = cases.get(ifCondition).getStatements2Execute();
+        assertEquals(1, ifStatements.size());
+
+        assertEquals(PrintStatement.class, ifStatements.get(0).getClass());
+        PrintStatement ifPrintStatement = (PrintStatement) ifStatements.get(0);
+
+        assertEquals(TextValue.class, ifPrintStatement.getExpression().getClass());
+        TextValue ifPrintValue = (TextValue) ifPrintStatement.getExpression();
+        assertEquals("a is greater than 5", ifPrintValue.getValue());
+
+        //elif case
+        assertEquals(GreaterThanOrEqualToOperator.class, conditions.get(1).getClass());
+        GreaterThanOrEqualToOperator elifCondition = (GreaterThanOrEqualToOperator) conditions.get(1);
+
+        assertTrue(elifCondition.getLeft() instanceof VariableExpression);
+        VariableExpression elifLeftExpression = (VariableExpression) elifCondition.getLeft();
+        assertEquals("a", elifLeftExpression.getName());
+
+        NumericValue elifRightExpression = (NumericValue) elifCondition.getRight();
+        assertEquals(1, elifRightExpression.getValue());
+
+        List<Statement> elifStatements = cases.get(elifCondition).getStatements2Execute();
+        assertEquals(1, elifStatements.size());
+
+        assertEquals(PrintStatement.class, elifStatements.get(0).getClass());
+        PrintStatement elifPrintStatement = (PrintStatement) elifStatements.get(0);
+
+        assertEquals(TextValue.class, elifPrintStatement.getExpression().getClass());
+        TextValue elifPrintValue = (TextValue) elifPrintStatement.getExpression();
+        assertEquals("a is greater than or equal to 1", elifPrintValue.getValue());
+
+        //else case
+        assertEquals(LogicalValue.class, conditions.get(2).getClass());
+        LogicalValue elseCondition = (LogicalValue) conditions.get(2);
+
+        assertEquals(true, elseCondition.getValue());
+
+        List<Statement> elseStatements = cases.get(elseCondition).getStatements2Execute();
+        assertEquals(1, elseStatements.size());
+
+        assertEquals(PrintStatement.class, elseStatements.get(0).getClass());
+        PrintStatement elsePrintStatement = (PrintStatement) elseStatements.get(0);
+
+        assertEquals(TextValue.class, elsePrintStatement.getExpression().getClass());
+        TextValue elsePrintValue = (TextValue) elsePrintStatement.getExpression();
+        assertEquals("a is less than 1", elsePrintValue.getValue());
+
+        DefinitionContext.endScope();
+        MemoryContext.endScope();
     }
 
     @Test
-    public void testObject() {
-        List<Token> tokens = Arrays.asList(
-                Token.builder().type(TokenType.Keyword).value("struct").row(1).build(),
+    public void testClass() {
+        List<Token> tokens = List.of(
+                Token.builder().type(TokenType.Keyword).value("class").row(1).build(),
                 Token.builder().type(TokenType.Variable).value("Person").row(1).build(),
                 Token.builder().type(TokenType.GroupDivider).value("[").row(1).build(),
                 Token.builder().type(TokenType.Variable).value("name").row(1).build(),
@@ -146,61 +223,71 @@ class StatementParserTest {
                 Token.builder().type(TokenType.Variable).value("age").row(1).build(),
                 Token.builder().type(TokenType.GroupDivider).value("]").row(1).build(),
                 Token.builder().type(TokenType.LineBreak).value("\n").row(1).build(),
-                Token.builder().type(TokenType.Variable).value("person").row(2).build(),
-                Token.builder().type(TokenType.Operator).value("=").row(2).build(),
-                Token.builder().type(TokenType.Operator).value("new").row(2).build(),
-                Token.builder().type(TokenType.Variable).value("Person").row(2).build(),
-                Token.builder().type(TokenType.GroupDivider).value("[").row(2).build(),
-                Token.builder().type(TokenType.Text).value("Robert").row(2).build(),
-                Token.builder().type(TokenType.GroupDivider).value(",").row(2).build(),
-                Token.builder().type(TokenType.Numeric).value("25").row(2).build(),
-                Token.builder().type(TokenType.GroupDivider).value("]").row(2).build(),
+                Token.builder().type(TokenType.Keyword).value("end").row(2).build(),
                 Token.builder().type(TokenType.LineBreak).value("\n").row(2).build(),
-                Token.builder().type(TokenType.Keyword).value("print").row(3).build(),
                 Token.builder().type(TokenType.Variable).value("person").row(3).build(),
-                Token.builder().type(TokenType.Operator).value("::").row(3).build(),
-                Token.builder().type(TokenType.Variable).value("name").row(3).build(),
-                Token.builder().type(TokenType.Operator).value("+").row(3).build(),
-                Token.builder().type(TokenType.Text).value(" is ").row(3).build(),
-                Token.builder().type(TokenType.Operator).value("+").row(3).build(),
-                Token.builder().type(TokenType.Variable).value("person").row(3).build(),
-                Token.builder().type(TokenType.Operator).value("::").row(3).build(),
-                Token.builder().type(TokenType.Variable).value("age").row(3).build(),
-                Token.builder().type(TokenType.Operator).value("+").row(3).build(),
-                Token.builder().type(TokenType.Text).value(" years old").row(3).build()
+                Token.builder().type(TokenType.Operator).value("=").row(3).build(),
+                Token.builder().type(TokenType.Operator).value("new").row(3).build(),
+                Token.builder().type(TokenType.Variable).value("Person").row(3).build(),
+                Token.builder().type(TokenType.GroupDivider).value("[").row(3).build(),
+                Token.builder().type(TokenType.Text).value("Randy Marsh").row(3).build(),
+                Token.builder().type(TokenType.GroupDivider).value(",").row(3).build(),
+                Token.builder().type(TokenType.Numeric).value("45").row(3).build(),
+                Token.builder().type(TokenType.GroupDivider).value("]").row(3).build(),
+                Token.builder().type(TokenType.LineBreak).value("\n").row(3).build(),
+                Token.builder().type(TokenType.Keyword).value("print").row(4).build(),
+                Token.builder().type(TokenType.Variable).value("person").row(4).build(),
+                Token.builder().type(TokenType.Operator).value("::").row(4).build(),
+                Token.builder().type(TokenType.Variable).value("name").row(4).build(),
+                Token.builder().type(TokenType.Operator).value("+").row(4).build(),
+                Token.builder().type(TokenType.Text).value(" is ").row(4).build(),
+                Token.builder().type(TokenType.Operator).value("+").row(4).build(),
+                Token.builder().type(TokenType.Variable).value("person").row(4).build(),
+                Token.builder().type(TokenType.Operator).value("::").row(4).build(),
+                Token.builder().type(TokenType.Variable).value("age").row(4).build(),
+                Token.builder().type(TokenType.Operator).value("+").row(4).build(),
+                Token.builder().type(TokenType.Text).value(" years old").row(4).build()
         );
-        StatementParser parser = new StatementParser(tokens);
-        CompositeStatement statement = (CompositeStatement) parser.parse();
+        DefinitionContext.pushScope(DefinitionContext.newScope());
+        MemoryContext.pushScope(MemoryContext.newScope());
+        CompositeStatement statement = new CompositeStatement();
+        StatementParser.parse(tokens, statement);
 
         List<Statement> statements = statement.getStatements2Execute();
         assertEquals(2, statements.size());
 
         // 1st statement
-        assertEquals(AssignStatement.class, statements.get(0).getClass());
-        AssignStatement assignmentStatement = (AssignStatement) statements.get(0);
-        assertEquals("person", assignmentStatement.getName());
+        assertEquals(ExpressionStatement.class, statements.get(0).getClass());
+        ExpressionStatement expressionStatement = (ExpressionStatement) statements.get(0);
 
-        assertEquals(StructureInstanceOperator.class, assignmentStatement.getExpression().getClass());
-        StructureInstanceOperator instanceOperator = (StructureInstanceOperator) assignmentStatement.getExpression();
+        assertEquals(expressionStatement.getExpression().getClass(), AssignmentOperator.class);
+        AssignmentOperator assignStatement = (AssignmentOperator) expressionStatement.getExpression();
 
-        assertEquals(StructureExpression.class, instanceOperator.getValue().getClass());
-        StructureExpression structure = (StructureExpression) instanceOperator.getValue();
-        StructureDefinition definition = structure.getDefinition();
+        assertTrue(assignStatement.getLeft() instanceof VariableExpression);
+        VariableExpression variableExpression = (VariableExpression) assignStatement.getLeft();
+        assertEquals("person", variableExpression.getName());
 
-        assertEquals("Person", definition.getName());
-        assertEquals(Arrays.asList("name", "age"), definition.getArguments());
+        assertEquals(ClassInstanceOperator.class, assignStatement.getRight().getClass());
+        ClassInstanceOperator instanceOperator = (ClassInstanceOperator) assignStatement.getRight();
 
-        assertEquals("Robert", structure.getArguments().get("name").toString());
-        assertEquals("25", structure.getArguments().get("age").toString());
+        assertEquals(ClassExpression.class, instanceOperator.getValue().getClass());
+        ClassExpression type = (ClassExpression) instanceOperator.getValue();
+
+        assertEquals("Person", type.getName());
+        assertEquals("Randy Marsh", type.getArgumentExpressions().get(0).toString());
+        assertEquals("45", type.getArgumentExpressions().get(1).toString());
 
         // 2nd statement
         PrintStatement printStatement = (PrintStatement) statements.get(1);
         assertEquals(AdditionOperator.class, printStatement.getExpression().getClass());
+
+        DefinitionContext.endScope();
+        MemoryContext.endScope();
     }
 
     @Test
     public void testComment() {
-        List<Token> tokens = Arrays.asList(
+        List<Token> tokens = List.of(
                 Token.builder().type(TokenType.Comment).value("# a = 5").build(),
                 Token.builder().type(TokenType.LineBreak).value("\n").build(),
                 Token.builder().type(TokenType.Variable).value("a").build(),
@@ -208,20 +295,30 @@ class StatementParserTest {
                 Token.builder().type(TokenType.Numeric).value("5").build(),
                 Token.builder().type(TokenType.Comment).value("# a is equal to 5").build()
         );
-        StatementParser parser = new StatementParser(tokens);
-        CompositeStatement statement = (CompositeStatement) parser.parse();
+        DefinitionContext.pushScope(DefinitionContext.newScope());
+        MemoryContext.pushScope(MemoryContext.newScope());
+        CompositeStatement statement = new CompositeStatement();
+        StatementParser.parse(tokens, statement);
 
         List<Statement> statements = statement.getStatements2Execute();
         assertEquals(1, statements.size());
 
-        assertEquals(AssignStatement.class, statements.get(0).getClass());
-        AssignStatement assignStatement = (AssignStatement) statements.get(0);
+        assertEquals(ExpressionStatement.class, statements.get(0).getClass());
+        ExpressionStatement expressionStatement = (ExpressionStatement) statements.get(0);
 
-        assertEquals("a", assignStatement.getName());
-        assertEquals(NumericValue.class, assignStatement.getExpression().getClass());
-        NumericValue numericValue = (NumericValue) assignStatement.getExpression();
+        assertEquals(expressionStatement.getExpression().getClass(), AssignmentOperator.class);
+        AssignmentOperator assignStatement = (AssignmentOperator) expressionStatement.getExpression();
+
+        assertTrue(assignStatement.getLeft() instanceof VariableExpression);
+        VariableExpression variableExpression = (VariableExpression) assignStatement.getLeft();
+        assertEquals("a", variableExpression.getName());
+        assertEquals(NumericValue.class, assignStatement.getRight().getClass());
+        NumericValue numericValue = (NumericValue) assignStatement.getRight();
 
         assertEquals(5, numericValue.getValue());
+
+        DefinitionContext.endScope();
+        MemoryContext.endScope();
     }
 
 }
